--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Garbage Collector Robot</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="home.css">
   </head>
   <body>
     <h1>WiE Garbage Collector Robot</h1>
